Homeworks update and new added